syntax = "proto3";

package bo_swaps;

import "google/protobuf/empty.proto";

service BOSwapsService {
  rpc Export(ListRequest) returns (ListDataResponse);
};

message BOSwaps {
  string email = 1;
  double amount = 2;
  string coin = 3;
  double receive = 4;
  string created_at = 5;
  string status = 6;
  double fee = 7;
}

// LIST REQUEST
message ListRequest {
  optional uint32 page = 1;
  optional uint32 limit = 2;
  optional string search_field = 4;
  optional string search_text = 5;
  optional string sort = 6;
  optional string sort_type = 7;
  optional string lang = 8;
  optional string start_date = 9;
  optional string end_date = 10;
  optional string currency = 11;
  optional string status = 12;
}


// RESPONSE
message ListMeta {
  uint32 total_items = 1;
  uint32 item_count = 2;
  uint32 items_per_page = 3;
  uint32 total_pages = 4;
  uint32 current_page = 5;
}

message ListData {
  repeated BOSwaps items = 1;
  optional ListMeta meta = 2;
}

message ListDataResponse {
  bool success = 1;
  optional string message = 2;
  optional ListData data = 3;
}
